--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
   padding-top: 5rem;
   overflow-x: hidden;
   font-family: "Plus Jakarta Sans", sans-serif;
-  background: linear-gradient(104deg, #f5f8fe 0%, #e5f4f8 100%);
+  background: var(--beige);
   display: flex;
   flex-direction: column;
   max-height: 100vh;
@@ -69,7 +70,7 @@ a {
 }
 
 .navbar-after-scroll {
-  background-color: var(--secondary-color);
+  background-color: var(--beige);
   transition: all 0.2s ease-in-out;
 }
 
@@ -260,11 +261,14 @@ a {
 }
 
 .mainhero {
-  height: 100vh;
-  background-image: url(/assets/img/Beranda/Beranda_Hero.png);
+  background-image: url("/assets/img/Beranda/Beranda_Hero.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.mainhero .container {
+  height: 100vh;
 }
 
 .btnhero {
@@ -426,12 +430,17 @@ a {
   border: 1.5px #a8a8a8 solid;
 }
 
+.bfstext {
+  color: var(--pink);
+}
+
 .ajakan {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px; /* Sesuaikan dengan jarak yang diinginkan antar elemen */
   justify-items: start;
   align-items: center;
+  text-align: justify;
   background: #f7f7f7;
 }
 
@@ -486,6 +495,7 @@ a {
   justify-content: center;
   align-items: center;
   display: flex;
+  background-color: var(--blue);
 }
 
 .himbauan-wrap {
@@ -493,16 +503,15 @@ a {
 }
 
 .himbauan-title {
-  color: #2eb3d6;
+  color: var(--beige);
   font-size: 24px;
   font-family: Plus Jakarta Sans;
   font-weight: 700;
-  line-height: 40px;
   word-wrap: break-word;
 }
 
 .himbauan-content {
-  color: black;
+  color: white;
   font-size: 24px;
   font-family: Plus Jakarta Sans;
   font-weight: bold;
@@ -516,7 +525,7 @@ a {
   justify-content: flex-start;
   align-items: center;
   display: flex;
-  background-color: var(--yellow);
+  background-color: var(--beige);
   padding-inline: 0;
 }
 
@@ -753,7 +762,7 @@ a {
   grid-template-columns: auto repeat(5, 1fr);
   grid-gap: 20px;
   padding: 20px;
-  background-color: var(--yellow);
+  background-color: var(--beige);
 }
 
 .logo img {
@@ -817,7 +826,7 @@ footer p {
 }
 
 .copyright {
-  background-color: var(--yellow);
+  background-color: var(--beige);
   opacity: 0.65;
   text-align: center;
   color: #0a142f;
